September 2005

Added alt-t/p accelerators to toggle between persistent and transient
brushing; transient brush now drawn as a dotted line.

Corrected a bug in the behavior of the "linkby" notebook on the
brushing panel, and improved its behavior (I hope) so that only the
relevant tab in the notebook is sensitive for each display.

Split the ViewMode menu into a View menu (representing projection),
as needed, and an Interaction menu.  This involved changes to over 60
files.


July 2005

Fixed a bug in linking brushing by variable that was causing the wrong
variable to be designated the linking variable.

Fixed a (very recent) bug in the GraphLayout and ggvis plugins which
caused new windows to be imperfectly linked to the brethren.

Added new graphviz layout algorithms to the GraphLayout plugin.


New signal added for the creation of a new displayd object. This is
emitted after the display is fully constructed and is being
registered.  We will miss a display if it is constructed separately
and not explicitly added to the collection of known displays.  But
that currently never happens and will be rare even when we instantiate
the classes outside of the ggobi control panel, e.g. in RGtk.


The 'PlotMenu' plug-in provides the infrastructure for adding
pop-menus for splot's, i.e. panels on displays.  These are potentially
contentious, but are convenient at least for sophisticated users. As
plugins, they work well as an optional add-on.  We can add
functionality to this module and splot's as desired.


Drag and drop for parallel coordinates displays.  One can drag a
"panel" onto another panel and currently they get swapped in position.
Different strategies for inserting the initial panel beside the target
one and moving those in between is easily done also.


Two routines added to the "API": ggobi_data_set_var_type and
ggobi_data_set_time_var to allow for users to specify the type of a
variable and whether it is a time variable or not.

